fixes the spacing at the head of the page and starting a sentence with a number issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,6 +212,7 @@ li::marker {
 
 .title {
   text-transform: uppercase;
+  margin: 4rem;
 }
 
 .table {
